@@ -1,4 +1,5 @@
 0.02_5
+    - error on messages longer than 140 characters
     - easy replies: "nick: ..." becomes "post @nick ..."
 
 0.02_4  2008-12-16
